--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Hide scrollbar for movie carousels */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 @layer base {
   :root {
     --background: 220 13% 9%;
